--- a/root/Assets/css/main.css
+++ b/root/Assets/css/main.css
@@ -48,6 +48,7 @@ body {
     display: block;
     text-transform: uppercase;
     position: relative;
+    width: 100%;
     /*    margin: 0 auto;*/
     /*    padding: 0 1em;*/
 }
@@ -128,19 +129,21 @@ main {
 #screen2 {
     background: var(--screen-line2);
     background-size: 100% 2px;
+    z-index: 2;
 }
 
 #term-content {
     background-color: black;
     border: 2px solid double rgba(128,255,128,0.8);
+   position: relative;
     display: block;
     padding: 1%;
     height: 70vh;
     width: 100%;
     overflow-y: auto;
     text-align: left;
-    z-index: 0;
-    margin: 0 1% 0 0;
+    
+    /*margin: 0 1% 0 0;*/
 }
 
 #scanline {
@@ -164,8 +167,7 @@ main {
     float: right;
     border: 2px solid var(--green);
     height: 75vh;
-    min-width: 50vh;
-    max-width: 75vh;
+    width: 50%;   
     text-wrap: normal;
     padding: 5px;
     margin-right: 3%;
