--- a/root/Assets/css/terminal.css
+++ b/root/Assets/css/terminal.css
@@ -1,2 +1,289 @@
-﻿body {
-}
+@charset "UTF-8";
+/*
+    Created on : Apr 9, 2022, 1:26:35 PM
+    Author     : eVmPr
+*/
+/* imports/fonts */
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Inconsolata&family=Roboto+Mono&family=Share+Tech+Mono&family=VT323&display=swap");
+/* variables */
+:root {
+  --vt323: 'VT323', monospace;
+  --smono: 'ShareTechMono', monospace;
+  --rmono: 'Roboto Mono', monospace;
+  --cprime: 'Courier Prime', 'Courier New', monospace;
+  --Inconsolata: 'Inconsolata', monospace;
+  --green: #5bf870;
+  --green2: rgba(128,255,128,0.8);
+  --rad-green: radial-gradient(ellipse 1000% 100% at 50% 90%, transparent, #121);
+  --screen-line: repeating-linear-gradient( 0deg, rgba(black, 0.15), rgba(black, 0.15) 1px, transparent 1px, transparent 2px);
+  --term-start: ">";
+  --term-cursor: "█"; }
+
+/* terminal screen components */
+#terminal {
+  border: 5px solid #BBBBBB;
+  background-color: #666666;
+  padding: 1%; }
+
+.type {
+  word-break: break-all; }
+
+.off #term-body {
+  /*background-color: black;*/
+  display: none; }
+
+#terminal button#power {
+  padding: 1%;
+  font-size: 1.5em;
+  /*font-weight: bold;*/
+  cursor: pointer;
+  margin-top: 1%;
+  z-index: 3; }
+
+div.monitor {
+  /*background-color: rgba(102, 102, 102, 0);*/
+  background: black;
+  padding: 1.5%;
+  border: 5px solid black;
+  border-radius: 5%;
+  width: 75vh;
+  height: 75vh;
+  position: relative;
+  display: block;
+  z-index: 1; }
+
+#term-body {
+  border: 1px solid black;
+  border: solid 3px #BBBBBB;
+  border-radius: 16px;
+  background-color: #131;
+  color: #33ffff;
+  font: 16px "VT323", monospace;
+  font-family: 'VT323', monospace;
+  text-transform: uppercase;
+  /* black shadow at the top of the terminal */
+  background-image: radial-gradient(ellipse 1000% 100% at 50% 90%, transparent, #121);
+  background-position: center;
+  display: block;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  /* shadow around the terminal */
+  box-shadow: inset 0 0 10em 1em rgba(0, 0, 0, 0.5);
+  /* prevents scanline from forming a scrollwheel */
+  overflow: hidden;
+  animation: textShadow 4s infinite; }
+
+#term-body::before {
+  content: " ";
+  display: block;
+  position: relative;
+  /*top: 0;*/
+  /*left: 0;*/
+  /*bottom: 0;*/
+  /*right: 0;*/
+  background: linear-gradient(rgba(18, 16, 16, 0.03) 50%, rgba(0, 0, 0, 0.45) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.22), rgba(0, 255, 0, 0.11), rgba(0, 0, 255, 0.22));
+  z-index: 2;
+  background-size: 100% 2px, 3px 100%; }
+
+#term-body::after {
+  content: " ";
+  display: block;
+  position: relative;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(21, 19, 19, 0.2);
+  opacity: 0;
+  z-index: 2; }
+
+.terminal-body {
+  background-color: #131;
+  color: var(--green);
+  /*font-family: $VT323;*/
+  text-shadow: 0 0 5px #C8C8C8;
+  width: 75vh;
+  height: 75vh;
+  position: relative;
+  top: 100%;
+  overflow: hidden;
+  background-image: radial-gradient(ellipse 1000% 100% at 50% 90%, transparent, #121);
+  background-position: center; }
+
+.terminal-body::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(21, 19, 19, 0.2);
+  opacity: 0;
+  z-index: 2; }
+
+#term-content {
+  overflow-y: auto;
+  padding: 5px 15px;
+  font-family: "VT323", monospace; }
+
+#term-body h1, #term-body h2, #term-body h3, #term-body h5, #term-body h6 {
+  color: #3F3;
+  text-align: center;
+  text-decoration: underline;
+  font-family: inherit; }
+
+#term-body hr {
+  color: var(--green2);
+  text-align: center;
+  width: 75%;
+  border-width: 0;
+  background-color: rgba(255, 255, 255, 0); }
+
+.terminal-body::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(rgba(18, 16, 16, 0.03) 50%, rgba(0, 0, 0, 0.45) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.22), rgba(0, 255, 0, 0.11), rgba(0, 0, 255, 0.22));
+  z-index: 2;
+  background-size: 100% 2px, 3px 100%; }
+
+/* terminal screen */
+#terminal-screen {
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(18, 16, 16, 0.1) 50%, rgba(0, 0, 0, 0.25) 50%);
+  background-size: 100% 8px;
+  z-index: 3;
+  pointer-events: none;
+  animation: fadeIn 2s; }
+
+#scanline {
+  /*margin-top: -40%;*/
+  width: 100%;
+  height: 20px;
+  position: relative;
+  pointer-events: none;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation: scan 12s linear 0s infinite;
+  /* You may need to change this. If the bar goes by too quickly, increase 5s. */
+  animation: scan 12s linear 0s infinite;
+  /* Same as above */
+  background: linear-gradient(to bottom, rgba(56, 112, 82, 0), rgba(56, 112, 82, 0.1)) !important; }
+
+.active:after {
+  animation: cursor 1s infinite;
+  animation-timing-function: step-end;
+  margin-left: 1px;
+  line-height: 1rem; }
+
+/*#term-body input[type="text"]*/
+/* terminal Text styles */
+#input {
+  color: var(--green2);
+  display: inline-block;
+  cursor: text;
+  padding: 0 5px; }
+
+#input:before {
+  content: var(--term-start); }
+
+#input:after {
+  content: var(--term-cursor);
+  animation: blink 800ms steps(13) infinite normal; }
+
+#input input[type="text"] {
+  border: none;
+  /*background-color: rgba(255,255,255,0);*/
+  background-color: rgba(255, 255, 255, 0);
+  cursor: text;
+  width: 10px;
+  z-index: 4;
+  caret-color: transparent; }
+
+/* terminal Inputs */
+#term-body input[type="text"] {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  color: var(--green2);
+  font-family: var(--vt323);
+  position: relative; }
+
+/* Animations */
+@-webkit-keyframes scan {
+  from {
+    transform: translateY(-10%); }
+  to {
+    transform: translateY(5000%); }
+  /* You may need to change this depending on the length of your terminal. If the scanline stops halfway, increase the second number.*/ }
+@keyframes scan {
+  from {
+    transform: translateY(-10%); }
+  to {
+    transform: translateY(5000%); }
+  /* Same as above.*/ }
+@keyframs typewriter {
+  from {
+    width: 0; }
+
+  to {
+    width: 50%; } }
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  25% {
+    opacity: 0; }
+  75% {
+    opacity: 1; }
+  100% {
+    opacity: 1; } }
+@keyframes textShadow {
+  0% {
+    text-shadow: 0.4389924193px 0 1px rgba(0, 30, 255, 0.5), -0.4389924193px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  5% {
+    text-shadow: 2.7928974011px 0 1px rgba(0, 30, 255, 0.5), -2.7928974011px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  10% {
+    text-shadow: 0.0295627584px 0 1px rgba(0, 30, 255, 0.5), -0.0295627584px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  15% {
+    text-shadow: 0.4021853855px 0 1px rgba(0, 30, 255, 0.5), -0.4021853855px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  20% {
+    text-shadow: 3.47940379px 0 1px rgba(0, 30, 255, 0.5), -3.47940379px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  25% {
+    text-shadow: 1.6125630401px 0 1px rgba(0, 30, 255, 0.5), -1.6125630401px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  30% {
+    text-shadow: 0.7015590085px 0 1px rgba(0, 30, 255, 0.5), -0.7015590085px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  35% {
+    text-shadow: 3.8969140477px 0 1px rgba(0, 30, 255, 0.5), -3.8969140477px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  40% {
+    text-shadow: 3.8709056148px 0 1px rgba(0, 30, 255, 0.5), -3.8709056148px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  45% {
+    text-shadow: 2.2310569634px 0 1px rgba(0, 30, 255, 0.5), -2.2310569634px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  50% {
+    text-shadow: 0.0808429042px 0 1px rgba(0, 30, 255, 0.5), -0.0808429042px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  55% {
+    text-shadow: 2.3758461067px 0 1px rgba(0, 30, 255, 0.5), -2.3758461067px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  60% {
+    text-shadow: 2.2021930511px 0 1px rgba(0, 30, 255, 0.5), -2.2021930511px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  65% {
+    text-shadow: 2.8638780615px 0 1px rgba(0, 30, 255, 0.5), -2.8638780615px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  70% {
+    text-shadow: 0.4887402516px 0 1px rgba(0, 30, 255, 0.5), -0.4887402516px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  75% {
+    text-shadow: 1.8948491306px 0 1px rgba(0, 30, 255, 0.5), -1.8948491306px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  80% {
+    text-shadow: 0.0833037308px 0 1px rgba(0, 30, 255, 0.5), -0.0833037308px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  85% {
+    text-shadow: 0.0976982726px 0 1px rgba(0, 30, 255, 0.5), -0.0976982726px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  90% {
+    text-shadow: 3.4433397615px 0 1px rgba(0, 30, 255, 0.5), -3.4433397615px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  95% {
+    text-shadow: 2.1841838853px 0 1px rgba(0, 30, 255, 0.5), -2.1841838853px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
+  100% {
+    text-shadow: 2.6208764474px 0 1px rgba(0, 30, 255, 0.5), -2.6208764474px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; } }
+/* style */
+
+/*# sourceMappingURL=terminal.css.map */
