--- a/root/Assets/css/tstyle.css
+++ b/root/Assets/css/tstyle.css
@@ -29,7 +29,7 @@ By Elena Miller
   border: 1em solid #646464;
   border-radius: 1em;
   float: left;
-  width: 50%;
+  width: 87.5vh;
   height: 65vh;
   margin: 1.5%;
   overflow: hidden;
