--- a/root/Assets/css/main.css
+++ b/root/Assets/css/main.css
@@ -49,7 +49,7 @@ body {
     display: block;
     text-transform: uppercase;
     position: relative;
-    width: 150vh;
+    width: 200vh;
     /*    margin: 0 auto;*/
     /*    padding: 0 1em;*/
 }
@@ -197,11 +197,16 @@ main {
     color: var()
 }
 
-.term-main details {
+.term-main details div {
     max-height: 25vh;
     overflow-y: auto;
 }
+.term-main ul li {
+    display: list-item;
 
+  
+}
+   
 /* nav style */
 
 /* main style */
